--- a/Examples.Repository.Impl.EFCore/Examples.Repository.Impl.EFCore.csproj
+++ b/Examples.Repository.Impl.EFCore/Examples.Repository.Impl.EFCore.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
@@ -24,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Examples.Respository.Common\Examples.Respository.Common.csproj" />
+    <ProjectReference Include="..\Examples.Respository.Common\Examples.Repository.Common.csproj" />
   </ItemGroup>
 
 </Project>
